added test tasks

--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,48 @@ dependencies {
 test {
     useTestNG()
 }
+
+task all(type: Test) {
+    useTestNG(){
+        def suite = System.getProperty('suite', '')
+
+        if (suite.equalsIgnoreCase('login')) {
+            suites 'src/test/resources/logintests.xml'
+        } else if (suite.equalsIgnoreCase('smoke')) {
+            suites 'src/test/resources/smoketests.xml'
+
+        } else {
+            suites 'src/test/resources/alltests.xml'
+        }
+//        ./gradlew clean -Dsuite='smoke' qa
+//        ./gradlew clean -Pbrowser=firefox -Dsuite='quick' qa
+//        -D - definition
+//        -P - property
+    }
+}
+
+task smoke(type: Test) {
+    useTestNG() {
+        suites 'src/test/resources/smoketests.xml'
+    }
+    if(project.hasProperty('browser')) {
+        systemProperty 'browser',
+                "${browser}"
+    }
+}
+
+task team(type: Test) {
+    useTestNG() {
+        def groups = System.getProperty('groups')
+        if(groups != null) {
+            includeGroups groups
+        }
+/*
+            *** Run tests by groups ***
+        ./gradlew clean -Dgroups=smoke team
+        ./gradlew clean -Dgroups=regress team
+        ./gradlew clean -Dgroups=retest team
+ */
+        suites 'src/test/resources/base.xml'
+    }
+}
